--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -61,24 +61,208 @@
                 </div>
                 <h2>Origen<br/>de los Ingresos</h2>
                 <hr class="pma-line-2">
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <div class="info-box">
-                        <span class="info-box-icon bg-yellow"><i class="fa fa-files-o"></i></span>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="info-box">
+                            <span class="info-box-icon">
+                                <img src="/static/images/icons/building.png" alt="Origen" class="center-block">
+                            </span>
 
-                        <div class="info-box-content">
-                        <span class="info-box-text">Uploads</span>
-                        <span class="info-box-number">13,648</span>
+                            <div class="info-box-content">
+                            <span class="info-box-text">Lorem ipsum dolor sit amet</span>
+                            <span class="info-box-number pma-blue">Inicial: 45%</span>
+                            <span class="info-box-number pma-green">Final: 13%</span>
+                            </div>
+                            <!-- /.info-box-content -->
                         </div>
-                        <!-- /.info-box-content -->
+                        <!-- /.info-box -->
                     </div>
-                    <!-- /.info-box -->
+                    <div class="col-md-6">
+                        <div class="info-box">
+                            <span class="info-box-icon">
+                                <img src="/static/images/icons/building.png" alt="Origen" class="center-block">
+                            </span>
+
+                            <div class="info-box-content">
+                            <span class="info-box-text">Lorem ipsum dolor sit amet</span>
+                            <span class="info-box-number pma-blue">Inicial: 45%</span>
+                            <span class="info-box-number pma-green">Final: 13%</span>
+                            </div>
+                            <!-- /.info-box-content -->
+                        </div>
+                        <!-- /.info-box -->
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="info-box">
+                            <span class="info-box-icon">
+                                <img src="/static/images/icons/building.png" alt="Origen" class="center-block">
+                            </span>
+
+                            <div class="info-box-content">
+                            <span class="info-box-text">Lorem ipsum dolor sit amet</span>
+                            <span class="info-box-number pma-blue">Inicial: 45%</span>
+                            <span class="info-box-number pma-green">Final: 13%</span>
+                            </div>
+                            <!-- /.info-box-content -->
+                        </div>
+                        <!-- /.info-box -->
+                    </div>
+                    <div class="col-md-6">
+                        <div class="info-box">
+                            <span class="info-box-icon">
+                                <img src="/static/images/icons/building.png" alt="Origen" class="center-block">
+                            </span>
+
+                            <div class="info-box-content">
+                            <span class="info-box-text">Lorem ipsum dolor sit amet</span>
+                            <span class="info-box-number pma-blue">Inicial: 45%</span>
+                            <span class="info-box-number pma-green">Final: 13%</span>
+                            </div>
+                            <!-- /.info-box-content -->
+                        </div>
+                        <!-- /.info-box -->
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="info-box">
+                            <span class="info-box-icon">
+                                <img src="/static/images/icons/building.png" alt="Origen" class="center-block">
+                            </span>
+
+                            <div class="info-box-content">
+                            <span class="info-box-text">Lorem ipsum dolor sit amet</span>
+                            <span class="info-box-number pma-blue">Inicial: 45%</span>
+                            <span class="info-box-number pma-green">Final: 13%</span>
+                            </div>
+                            <!-- /.info-box-content -->
+                        </div>
+                        <!-- /.info-box -->
+                    </div>
+                    <div class="col-md-6">
+                        <div class="info-box">
+                            <span class="info-box-icon">
+                                <img src="/static/images/icons/building.png" alt="Origen" class="center-block">
+                            </span>
+
+                            <div class="info-box-content">
+                            <span class="info-box-text">Lorem ipsum dolor sit amet</span>
+                            <span class="info-box-number pma-blue">Inicial: 45%</span>
+                            <span class="info-box-number pma-green">Final: 13%</span>
+                            </div>
+                            <!-- /.info-box-content -->
+                        </div>
+                        <!-- /.info-box -->
+                    </div>
                 </div>
             </div>
         </div>
         <div class="col-md-6">
         <div class="gray-box">
+                <div class="pma-summary-box">
+                    <span class="font_small">Asignado:</span><span class="font_small">9 millones</span>
+                    <span class="font_small">Ejecutado:</span><span class="font_small">7 millones</span>
+                </div>
             <h2>Destino<br/>de los Gastos</h3>
             <hr class="pma-line-2">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="info-box">
+                            <span class="info-box-icon">
+                                <img src="/static/images/icons/building.png" alt="Origen" class="center-block">
+                            </span>
+
+                            <div class="info-box-content">
+                            <span class="info-box-text">Lorem ipsum dolor sit amet</span>
+                            <span class="info-box-number pma-blue">Inicial: 45%</span>
+                            <span class="info-box-number pma-green">Final: 13%</span>
+                            </div>
+                            <!-- /.info-box-content -->
+                        </div>
+                        <!-- /.info-box -->
+                    </div>
+                    <div class="col-md-6">
+                        <div class="info-box">
+                            <span class="info-box-icon">
+                                <img src="/static/images/icons/building.png" alt="Origen" class="center-block">
+                            </span>
+
+                            <div class="info-box-content">
+                            <span class="info-box-text">Lorem ipsum dolor sit amet</span>
+                            <span class="info-box-number pma-blue">Inicial: 45%</span>
+                            <span class="info-box-number pma-green">Final: 13%</span>
+                            </div>
+                            <!-- /.info-box-content -->
+                        </div>
+                        <!-- /.info-box -->
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="info-box">
+                            <span class="info-box-icon">
+                                <img src="/static/images/icons/building.png" alt="Origen" class="center-block">
+                            </span>
+
+                            <div class="info-box-content">
+                            <span class="info-box-text">Lorem ipsum dolor sit amet</span>
+                            <span class="info-box-number pma-blue">Inicial: 45%</span>
+                            <span class="info-box-number pma-green">Final: 13%</span>
+                            </div>
+                            <!-- /.info-box-content -->
+                        </div>
+                        <!-- /.info-box -->
+                    </div>
+                    <div class="col-md-6">
+                        <div class="info-box">
+                            <span class="info-box-icon">
+                                <img src="/static/images/icons/building.png" alt="Origen" class="center-block">
+                            </span>
+
+                            <div class="info-box-content">
+                            <span class="info-box-text">Lorem ipsum dolor sit amet</span>
+                            <span class="info-box-number pma-blue">Inicial: 45%</span>
+                            <span class="info-box-number pma-green">Final: 13%</span>
+                            </div>
+                            <!-- /.info-box-content -->
+                        </div>
+                        <!-- /.info-box -->
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="info-box">
+                            <span class="info-box-icon">
+                                <img src="/static/images/icons/building.png" alt="Origen" class="center-block">
+                            </span>
+
+                            <div class="info-box-content">
+                            <span class="info-box-text">Lorem ipsum dolor sit amet</span>
+                            <span class="info-box-number pma-blue">Inicial: 45%</span>
+                            <span class="info-box-number pma-green">Final: 13%</span>
+                            </div>
+                            <!-- /.info-box-content -->
+                        </div>
+                        <!-- /.info-box -->
+                    </div>
+                    <div class="col-md-6">
+                        <div class="info-box">
+                            <span class="info-box-icon">
+                                <img src="/static/images/icons/building.png" alt="Origen" class="center-block">
+                            </span>
+
+                            <div class="info-box-content">
+                            <span class="info-box-text">Lorem ipsum dolor sit amet</span>
+                            <span class="info-box-number pma-blue">Inicial: 45%</span>
+                            <span class="info-box-number pma-green">Final: 13%</span>
+                            </div>
+                            <!-- /.info-box-content -->
+                        </div>
+                        <!-- /.info-box -->
+                    </div>
+                </div>
         </div>
         </div>
     </div>
