--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -26,7 +26,7 @@
 
     <body>
         <!-- Header -->
-        <header class="pma-gradient">
+        <header class="pma-gradient pma-header">
             <nav class="navbar" role="navigation">
                 <!-- El logotipo y el icono que despliega el menú se agrupan
                     para mostrarlos mejor en los dispositivos móviles -->
@@ -112,7 +112,10 @@
                             <span id="brand-02">Municipales </span>
                             <span id="brand-03">Abiertos </span>
                         </a>
-                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation </p>
+                        <p>Las opiniones expresadas en este sitio web no
+                        reflejan necesariamente las de la Agencia de los Estados
+                        Unidos para el Desarrollo Internacional, USAID, o la del
+                        Gobierno de los Estados Unidos.</p>
                         <a href="#" class="pma-special-link font_small">POLÍTICAS DE PRIVACIDAD</a>
                     </div>
                     <div class="col-md-6">
