--- a/core/static/css/pma.css
+++ b/core/static/css/pma.css
@@ -215,7 +215,7 @@ footer .copyright {
 }
 .progress-description,
 .info-box-text {
-    display: inline-block;
+    display: block;
     font-size: 14px;
     overflow: hidden;
 }
