add slug class for icon

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -60,7 +60,7 @@
                 {% endif %}
                     <div class="col-md-6">
                         <div class="info-box">
-                            <span class="info-box-icon">
+                            <span class="info-box-icon {{origen.subsubtipoingreso__origen__nombre}}">
                                 <img src="/static/images/icons/building.png" alt="Origen" class="center-block">
                             </span>
                             <div class="info-box-content">
