define sources and expenses icon classes

--- a/core/static/css/pma-icon.css
+++ b/core/static/css/pma-icon.css
@@ -45,18 +45,18 @@
 	content: "\e66d";
 }
 /* 3 - Otros */
-.otros-gastos
+.otros-gastos{}
 /* 5 - Préstamos */
-.prestamos
+.prestamos{}
 /* 5 - Materiales y Sumistros */
-.materiales-y-sumistros
+.materiales-y-sumistros{}
 /* 3 - Otras transferencias del gobierno central */
-.otras-transferencias-del-gobierno-central
+.otras-transferencias-del-gobierno-central{}
 /* 1 - Gastos de Personal */
-.gastos-de-funcionamiento
+.gastos-de-funcionamiento{}
 /* 6 - Otros origenes */
-.otros-origenes
+.otros-origenes{}
 /* 2 - Servicios No Personales */
-.inversion
+.inversion{}
 /* 4 - Bienes de Uso/Inversión */
-.servicios-no-personaler
+.servicios-no-personaler{}
