--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -17,7 +17,7 @@
     </div>
 </div>
 {% endblock %}
-{% block content %}
+{% block main_content %}
 <div class="container">
     <div class="row">
         <div class="col-md-6">
