put the linked icon styles

--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap-theme.css' %}">
     <link rel="stylesheet" href="{% static 'css/pma.css' %}">
+    <link rel="stylesheet" href="{% static 'css/pma-icon.css' %}">
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
